--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.10.6",
     "@strapi/plugin-users-permissions": "4.10.6",
+    "@strapi/provider-upload-aws-s3": "^4.11.0",
     "@strapi/strapi": "4.10.6",
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.0"
