--- a/.github/workflows/dispatch-pull-repo.yml
+++ b/.github/workflows/dispatch-pull-repo.yml
@@ -1,14 +1,22 @@
 name: Dispatch Pull Repo
 
-steps:
-- uses: actions/github-script@v6
-  with:
-    github-token: ${{ secrets.GH_TOKEN }}
-    script: |
-      await github.rest.actions.createWorkflowDispatch({
-       owner: '${{ vars.REPO_OWNER }}',
-       repo: '${{ vars.REPO_NAME }}',
-       workflow_id: 'pull-repos.yml',
-       ref: 'main'
-      })
+on:
+  workflow_dispatch:
+
+
+jobs:
+  dispatch_pull_repos:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GH_TOKEN }}
+        script: |
+          await github.rest.actions.createWorkflowDispatch({
+          owner: '${{ vars.REPO_OWNER }}',
+          repo: '${{ vars.REPO_NAME }}',
+          workflow_id: 'pull-repos.yml',
+          ref: 'main'
+          })
 
